# stell-structure-optimizer

./: README.md  app.py  frame_analyzer.py  profile_manager.py  profiles.pkl  profiles_database.xlsx  pyproject.toml  requirements.txt  structural_model.py  test_analyzer.py  visaulizer_web_app.py  visualizer.py  ~$profiles_database.xlsx
.devcontainer/: devcontainer.json
database/: profiles_database.ipynb
src/stell_structure_optimizer/: __init__.py
src/stell_structure_optimizer/analysis/: frame_analyzer.py
src/stell_structure_optimizer/app/: app.py
src/stell_structure_optimizer/design/: aisc360_verifier.py
src/stell_structure_optimizer/visualization/: visaulizer_web_app.py  visualizer.py
tests/: test_analyzer.py
