[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stell-structure-optimizer"
version = "0.1.0"
description = "Analyzer and Optimizer for Steel Structures Using Commercial Steel Profiles"
authors = [{name = "Unknown"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "plotly",
    "streamlit"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
stell_structure_optimizer = ["data/*.pkl"]

[tool.setuptools.packages.find]
where = ["src"]
